[package]
name = "untangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.5.1", optional = true }
fastrand = "2.1.1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
